acid/k8s/vault/vault-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  annotations:
    cloud.google.com/backend-config: '{"ports": {"8200":"vault-backendconfig"}}'
spec:
  type: ClusterIP
  selector:
    app: vault
  ports:
    - name: vault-api
      port: 8200
      targetPort: 8200
